--- a/index.html
+++ b/index.html
@@ -64,7 +64,22 @@
                 <span>Filter by Series:</span>
                 <select id="flair-filter-sheet" onchange="flair.updateFlairFilter(this.value)">
                     <option value="ALL">All Units</option>
+                    <option value="ff1">Final Fantasy I</option>
+                    <option value="ff2">Final Fantasy II</option>
+                    <option value="ff3">Final Fantasy III</option>
+                    <option value="ff4">Final Fantasy IV</option>
+                    <option value="ff5">Final Fantasy V</option>
+                    <option value="ff6">Final Fantasy VI</option>
                     <option value="ff7">Final Fantasy VII</option>
+                    <option value="ff8">Final Fantasy VIII</option>
+                    <option value="ff9">Final Fantasy IX</option>
+                    <option value="ff10">Final Fantasy X</option>
+                    <option value="ff11">Final Fantasy XI</option>
+                    <option value="ff12">Final Fantasy XII</option>
+                    <option value="ff13">Final Fantasy XIII</option>
+                    <option value="ff14">Final Fantasy XIV</option>
+                    <option value="ff15">Final Fantasy XV</option>
+                    <option value="fft">Final Fantasy Tactics</option>
                     <option value="glex">Global Exclusives</option>
                     <option value="other">Others</option>
                 </select>
