--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                     <option value="ff14">Final Fantasy XIV</option>
                     <option value="ff15">Final Fantasy XV</option>
                     <option value="fft">Final Fantasy Tactics</option>
+                    <option value="ff0">Final Fantasy Type-0</option>
+                    <option value="collab">Collaboration</option>
                     <option value="glex">Global Exclusives</option>
                     <option value="other">Others</option>
                 </select>
