--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         a flair text in the field that says "Insert flair text here", this is the text that will appear when you hover
         over your flair in the subreddit.</p>
         
-        <p>Once happy with your selection, click "Send Flair Request" which will open up a message form to /u/MimicBot,
+        <p>Once happy with your selection, click "Send Flair Request" which will open up a message form to /u/FFBEFlairBot,
         do not change anything, just click send. You should receive a reply from the bot within several moments notifying
         you that it has received your message and changed your flair.</p>
         
         <p><b>Found a bug?</b><br/>
-        Please <a href="https://www.reddit.com/message/compose?to=%2Fr%2Fbravefrontier">message the moderators of /r/bravefrontier</a>
+        Please <a href="https://www.reddit.com/message/compose?to=%2Fr%2FFFBraveExvius">message the moderators of /r/FFBraveExvius</a>
         if you need additional help or found a problem / bug.</p>
     </div>
     <div class="wrapper">
