--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 <span>Filter by Series:</span>
                 <select id="flair-filter-sheet" onchange="flair.updateFlairFilter(this.value)">
                     <option value="ALL">All Units</option>
+                    <option value="be">Brave Exvius Original</option>
                     <option value="ff">Final Fantasy Series</option>
-                    <option value="fft">Final Fantasy Tactics</option>
-                    <option value="ff0">Final Fantasy Type-0</option>
-                    <option value="collab">Collaboration</option>
+                    <option value="spoff">Final Fantasy Spin-offs</option>
+                    <option value="collab">Collaborations</option>
                     <option value="glex">Global Exclusives</option>
                     <option value="other">Others</option>
                 </select>
