--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="wrapper">
         <div id="flair-filter" class="center" style="-webkit-justify-content:space-between;justify-content:space-between;">
-            <input id="flair-filter-text" type="text" placeholder="Filter by Unit Name or Flair ID"
+            <input id="flair-filter-text" type="text" placeholder="Filter by Name, DEX or Game Title"
                 onkeyup="flair.updateFilter(this.value)" onchange="flair.updateFilter(this.value)" />
             <label for="flair-filter-sheet">
                 <span>Filter by Series:</span>
