--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         over your flair in the subreddit.</p>
         
         <p>Once happy with your selection, click "Send Flair Request" which will open up a message form to /u/FFBEFlairBot,
-        do not change anything, just click send. You should receive a reply from the bot within several moments notifying
-        you that it has received your message and changed your flair.</p>
+        do not change anything, just click send. Your flair and flair text should be changed within a few minutes.</p>
         
         <p><b>Found a bug?</b><br/>
         Please <a href="https://www.reddit.com/message/compose?to=%2Fr%2FFFBraveExvius">message the moderators of /r/FFBraveExvius</a>
